--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <h3>Hi i'm Bas Sondag</h3>
 
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <h3> My github user name is BasSondag</h3>
+
+    <p>So far i only working with html,css and jquery. There al three fun to work with. I can't waith to be done with the bootcamp</p>
 
   </body>
 </html>
