--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,13 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    I'm Michael Arbogast; I am attending coding dojo's feb 22 cohort in Seattle. I've worked as a small boat sailing instructor, 
+    a Latin teacher, a math tutor, and a radio DJ.
     <!-- Your name -->
-
+    Michael Arbogast
     <!-- Your GitHub user name -->
-    
+    marboga
     <!-- Your favorite coding language -->
-
+  thus far? python.
   </body>
 </html>
