--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,8 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+    <p> My name is Gabe Ratcliff </p>
+    <p> My GitHub username is gratcliff </p>
+    <p> I'm not sure what my favorite coding language is yet! </p>
   </body>
 </html>
