added personal info

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,14 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    First Name: Vu
+    Last Name:  Dinh
 
     <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    vhdinh
 
+    <!-- Your favorite coding language -->
+    it's too early to say. I've only been doing HTML, jQuery, and CSS so far.
+    I like all the new languages that I will be learning at Coding Dojo.
   </body>
 </html>
