--- a/demo_index.html
+++ b/demo_index.html
@@ -13,5 +13,6 @@
     <!-- xJeff -->
     <!-- Your favorite coding language -->
     <!-- I have yet to determine -->
+    <p>Added text</p>
   </body>
 </html>
