--- a/demo_index.html
+++ b/demo_index.html
@@ -14,5 +14,6 @@
     <!-- Your favorite coding language -->
     <!-- I have yet to determine -->
     <p>Added text</p>
+    <p>Added Text</p>
   </body>
 </html>
