--- a/demo_index.html
+++ b/demo_index.html
@@ -7,10 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
     
+
+
+    <h3>Name: Jonathan Ben-Ammi</h3>
+    <h4>GitHub ID: JBenammi</h4>
+    <p>Don't currently have a favorite coding language at this time.</p>
     <!-- Your favorite coding language -->
 
   </body>
