--- a/demo_index.html
+++ b/demo_index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Git Demo Index Page</title>
+    <title>Git Demo Index Page UPDATE</title>
   </head>
   <body>
     <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original
+       <br>
+      Hellow world
+      <br>
+      This is a TEST!!!!
+       <br>
+       123
+    </p>
 
   </body>
 </html>
