modified demo with personal info

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I am a gaming enthusiast that loves a challenge.  I am currently doing a coding bootcamp in order to become a developer.  </p>
     <!-- Your name -->
-
+    <p>Clinton Johnson</p>
     <!-- Your GitHub user name -->
-    
+    <p>chwjohnson</p>
     <!-- Your favorite coding language -->
-
+    <p>I have yet to develop a favorite coding language as I am only just learning more about different languages.</p>
   </body>
 </html>
