added h2,h4 and h6 info to page

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h2>Tiffany Thompson</h2>
     <!-- Your GitHub user name -->
-    
+    <h4>github.com/tthompson899/</h4>
     <!-- Your favorite coding language -->
-
+    <h6>Javascript</h6>
   </body>
 </html>
