initial update commit

--- a/demo_index.html
+++ b/demo_index.html
@@ -3,15 +3,22 @@
   <head>
     <title>Git Demo Index Page</title>
   </head>
+  <style>
+* {margin: 0; padding: 0; background-color: black, color: white;}
+#wrapper { width: 970px; margin: 0 auto;}
+
+  </style>
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <h1>Some Info About Me</h1>
     <!-- Your name -->
-
+	<h4>My name is Terry Thomas</h4>
     <!-- Your GitHub user name -->
-    
+    <h4>My GitHub user name is: ntxtthomas</h4>
     <!-- Your favorite coding language -->
+	<h4>My favorite coding language is limited by the exposure that I've had to date. I'm currently at the end of Web Fundementals, so.. JavaScript.</h4>
 
   </body>
 </html>
