--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,8 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+    <p>Hello, my name is Chris Ulanowicz</p>
+    <p>My GitHub user name is @chrisulanowicz</p>
+    <p>I've only just gotten through HTML, CSS, and jQuery so without any experience in other languages I really don't have a favorite one yet</p>
   </body>
 </html>
