--- a/demo_index.html
+++ b/demo_index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Git Demo Index Page</title>
+    <meta charset="UTF-8">
+    <title>Git Demo Index Page - Forked!</title>
   </head>
   <body>
+    <div id="container">
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>Name: Yung Kim</p>
     <!-- Your GitHub user name -->
-    
+    <p>GitHub name: gimyoong</p>
     <!-- Your favorite coding language -->
-
+    <p>Favorite coding language: Python</p>
+    </div>
   </body>
 </html>
