Made some changes to demo_index.html

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,8 +8,12 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <p>This is Kevin Williams</p>
+
+    <h3>You'll find me at greenkevin on github</h3>
 
     <!-- Your GitHub user name -->
+    <p>Coding languages are like my children.  I don't have a favorite.  I hate them all equally.</p>
     
     <!-- Your favorite coding language -->
 
