--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,10 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <h3> Renee Messick</h3>
+    <p>My github user name: rnmessick</p>
 
-    <!-- Your GitHub user name -->
+   <p>My favorite coding language(so far) Javascript! </p>
     
-    <!-- Your favorite coding language -->
-
   </body>
 </html>
