--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+      <p>My name is Erika Magallon</p>
     <!-- Your GitHub user name -->
-    
+      <p>My GitHub user name is ebruin22</p>
     <!-- Your favorite coding language -->
-
+      <p>My favorite coding language is Python</p>
   </body>
 </html>
