--- a/demo_index.html
+++ b/demo_index.html
@@ -9,7 +9,7 @@
     <!-- Add some information about yourself below -->
     <p>Im in US</p>
     <!-- Your name -->
-    <p>Juliet</p>
+    <p>Juliet!</p>
     <!-- Your GitHub user name -->
     <p>secret</p>
     <!-- Your favorite coding language -->
