--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,12 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    I am studying to be a wizard at programming!
+    Dustin Brown
 
-    <!-- Your GitHub user name -->
+    DustyDrB
     
-    <!-- Your favorite coding language -->
+    JavaScript
 
   </body>
 </html>
