--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,12 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h1> Nicole Peoples</h1>
     <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
 
+    <h2> Github User Name: nicolecpeoples</h2>
+
+    <!-- Your favorite coding language -->
+    <p> My favorite coding language so far is Javascript! As me at the end of Coding Dojo and we'll see if I've changed my mind!</p>
   </body>
 </html>
