added personal info

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    Frank Modic
 
     <!-- Your GitHub user name -->
+    frankmodic
     
     <!-- Your favorite coding language -->
+    Don't know yet, I only know 2 basic web development languages, and the basics of Javascript. It will likely end up being Python, although I like JS.
 
   </body>
 </html>
