--- a/demo_index.html
+++ b/demo_index.html
@@ -13,5 +13,7 @@
     
     <!-- Your favorite coding language -->
 
+    <p>If you are reading this its alrdy too late. -Drake</p>
+
   </body>
 </html>
