--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>My name is Lauren Steyn</p>
     <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+    <p>My git hub user name is LaurenSteyn</p>
+    <!-- Your favorite coding language -->  
+    <p>If only I knew what my favorite coding language was. New at this and loving learning everything new so far.</p>
   </body>
 </html>
