--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    I'm a student inspired by technology. I'm very optimistic, motivated and excited about enabling lives. 
     <!-- Your name -->
-
+    <h1>Ketan Rajesh Kumar</h1>
     <!-- Your GitHub user name -->
-    
+    <h2>Ketan-rk</h2>
     <!-- Your favorite coding language -->
-
+    <p>Python</p>
   </body>
 </html>
