--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,13 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <p> I am super cool </p>
+    <p> My name is Shay Culpepper</p>
 
-    <!-- Your GitHub user name -->
+    <p> Username: shaypepper </p>
     
     <!-- Your favorite coding language -->
+    <p> Python is beautiful, but I have a sweet spot for Javascript right now. </p>
 
   </body>
 </html>
