--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>My name is Kyle Seem. I live in the Capital District of New York with my boyfriend and our cat. I like cake.</p>
     <!-- Your GitHub user name -->
-    
+    <p>My GitHub user name is KyleSeem (easy enough).</p>
     <!-- Your favorite coding language -->
-
+    <p>My favorite coding language? I'd say it's still a bit early to tell.</p>
   </body>
 </html>
