Added my personal info.

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,15 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <table>
+      <th>Name:</th> 
+      <td>Joe Kleinschmidt</td>
     <!-- Your GitHub user name -->
-    
+      <th>GitHub user name:</th>
+      <td>joeforyou</td>
     <!-- Your favorite coding language -->
-
+      <th>Favorite coding language:</th>
+      <td>Right now, I'd say Python because it sounds cool.</td>
+    </table>
   </body>
 </html>
