added some stuff

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <p>Mathew</p>
 
     <!-- Your GitHub user name -->
+    <p>Mathengel</p>
     
     <!-- Your favorite coding language -->
+    <p>a bit to early for that</p>
 
   </body>
 </html>
