--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>My name is TOMMY OH!</p>
     <!-- Your GitHub user name -->
-    
+    <p>My GitHub user name is "fobbytommy"</p>
     <!-- Your favorite coding language -->
+    <p>My heart is still with C++</p>
 
   </body>
 </html>
