Changes I, Clayton, have made

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>Here is deep info about myself</p>
     <!-- Your name -->
-
+    <p>Mr.Magoo</p>
     <!-- Your GitHub user name -->
-    
+    <p>waterFlowin</p>
     <!-- Your favorite coding language -->
-
+    <p>RRRRRRRUUUUUUUUBBBBBBBBBBYYYYYYY although I have to admit Python looks really interesting.</p>
   </body>
 </html>
