made some changes and commited

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,13 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    My favorite sport is basketball. I am really hoping that the OKC Thunders make it to the championships vs. the Cleveland Cavilers. OKC Thunders win it all! 
     <!-- Your name -->
-
+    Jonathan Kim    
     <!-- Your GitHub user name -->
-    
+    kimjonathan1123
     <!-- Your favorite coding language -->
-
+    I am not sure yet.. I would really like to get into C++ and Java 
+    
   </body>
 </html>
