--- a/demo_index.html
+++ b/demo_index.html
@@ -7,10 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-   <p>Keya</p>
-   <p>keyafaze</p>
+    <!-- Your name -->
+
+    <!-- Your GitHub user name -->
     
-   <p>ALL!</p>
+    <!-- Your favorite coding language -->
 
   </body>
 </html>
