--- a/demo_index.html
+++ b/demo_index.html
@@ -8,9 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>I am adding info here</p>
+    <p>Brian GArcia</p>
     <!-- Your GitHub user name -->
-    
+    <P> I'm learning how to clone push and fork. 
     <!-- Your favorite coding language -->
 
   </body>
