--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,12 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    Jill Mollica
 
     <!-- Your GitHub user name -->
+    jmollica229
     
     <!-- Your favorite coding language -->
-
+    Unable to say at this time.. still just working on the basics.. html/css/jquery/and getting used to Git and GitHub.
   </body>
 </html>
