--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,6 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+    <p>My name is Roger Vongmixay I am a current student at the Coding Dojo. Some of my hobbies are playing video games, watching anime and going to the gym to exercise. My GitHub user name is rogervong and I do not have a specific favorite coding language.<p>
   </body>
 </html>
