--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>My name is Steve Duncan</p>
     <!-- Your GitHub user name -->
-    
+    <p>My GitHub name is Steve-Duncan</p>
     <!-- Your favorite coding language -->
+    <p>It's difficult to say which is my favorite language, but I like vbScript, PowerShell, AutoIt and plain old Windows batch command language. I'm sure my favorites will change as I move more into web languages!</p>
 
   </body>
 </html>
