--- a/demo_index.html
+++ b/demo_index.html
@@ -7,9 +7,8 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
+    <h1>Jeric Cartas</h1>
+    <h2>Tadp0ol</h2>
     
     <!-- Your favorite coding language -->
 
