--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,15 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>Hello everyone, Iam a web developer</p>
     <!-- Your name -->
-
+    <p>My name is Janatbek Sharsheyev</p>
+    
     <!-- Your GitHub user name -->
+    <p>My github username is : https://github.com/Janatbek</p>
     
     <!-- Your favorite coding language -->
+    <p>My favorite coding language is Javascript and node.js</p>
 
   </body>
 </html>
