changed the demo file

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I am a student at the Coding Dojo Dallas in the June 20th Cohort.</p>
     <!-- Your name -->
-
+    <p>Thomas Edstrom</p>
     <!-- Your GitHub user name -->
-    
+    <a href="https://github.com/thomasjedstrom">thomasjedstrom</a>
     <!-- Your favorite coding language -->
-
+    <p>Since I only really know JavaScript and JQuery, ...I'd have to say JavaScript so far.</p>
   </body>
 </html>
