committing my changes to demo_index.html

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>My name is Annie Ritch</p>
     <!-- Your GitHub user name -->
-    
+    <p>My GitHub username is ajritch</p>
     <!-- Your favorite coding language -->
-
+    <p>I really like R! But that's because I've spent a lot of time with it and used it for my thesis. I also like C++ because I'm familiar with it and like its object-oriented funcionality.</p>
   </body>
 </html>
