--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h2>Me: Patrick Todd</h2>
     <!-- Your GitHub user name -->
-    
+    <h3>Check out my stuff @ https://github.com/falterfriday</h3>
     <!-- Your favorite coding language -->
-
+    <h4>Favorite language so far... JavaScript</h4>
   </body>
 </html>
