--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,15 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I am a freaking coding ninja</p>
     <!-- Your name -->
+    <h4>Norbert Budai</h4>
 
     <!-- Your GitHub user name -->
+    <h6>ncbudai</h6>
     
     <!-- Your favorite coding language -->
+    <p>Dont know yet</p>
 
   </body>
 </html>
