--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <h1>Karen Chin &hearts;</h1>
 
     <!-- Your GitHub user name -->
+    <h2>ckaren28</h2>
     
     <!-- Your favorite coding language -->
+    <p>Well, I dont really know yet but I think Ruby is the prettiest.</p>
 
   </body>
 </html>
