add some info about self

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,14 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+	<p>Foo Bar Emily cause i'm real secretive :)</p>
 
     <!-- Your GitHub user name -->
+	<p>jkspam2004</p>
     
     <!-- Your favorite coding language -->
+	<p>starting to like javascript.  otherwise, perl and python</p>
+
 
   </body>
 </html>
