added comment to test

--- a/demo_index.html
+++ b/demo_index.html
@@ -16,6 +16,7 @@
     <!-- Your favorite coding language -->
 	<p>starting to like javascript.  otherwise, perl and python</p>
 
+	<!-- adding to test -->
 
   </body>
 </html>
