--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,10 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
+    <!-- Your name --><p>joshua alley</p>
     <!-- Your GitHub user name -->
-    
+    <p>jauschalley</p>
     <!-- Your favorite coding language -->
-
+<p>python</p>
   </body>
 </html>
