initial commit to the fork

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <h2>My name is Chris!</h2>
 
     <!-- Your GitHub user name -->
+    <h3>My GitHub user name is cbaut</h3>
     
     <!-- Your favorite coding language -->
+    <h4>My favorite coding language is Swift!</h4>
 
   </body>
 </html>
