--- a/demo_index.html
+++ b/demo_index.html
@@ -12,6 +12,8 @@
     <!-- Your GitHub user name -->
     
     <!-- Your favorite coding language -->
+	<h4>My name is Lana, GitHub user name Svetka0827 and i havent
+	decide yet what coding language i like the most :)</h4>
 
   </body>
 </html>
