These are my changes

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <h3>Tom Bridgeman</h3><!-- Your name -->
 
-    <!-- Your GitHub user name -->
+    <h3>LANole</h3><!-- Your GitHub user name -->
     
-    <!-- Your favorite coding language -->
+    <h3>Not sure yet... not CSS!</h3><!-- Your favorite coding language -->
 
   </body>
 </html>
