--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h3>Morley Tatro</h3>
     <!-- Your GitHub user name -->
-    
+    <h3>morleytatro</h3>
     <!-- Your favorite coding language -->
-
+    <p>So far, it's a toss up between Javascript and PHP.</p>
   </body>
 </html>
