--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h1>Alex W</h1>
     <!-- Your GitHub user name -->
-    
+    <p>alex-wap</p>
     <!-- Your favorite coding language -->
-
+    <p>ruby</p>
   </body>
 </html>
