updated personal info

--- a/demo_index.html
+++ b/demo_index.html
@@ -9,10 +9,10 @@
     <!-- Add some information about yourself below -->
 
     <!-- Your name -->
-
+    <p>Name: Evan</p>
     <!-- Your GitHub user name -->
-
+    <p>GitHub Username: evcallia</p>
     <!-- Your favorite coding language -->
-    
+    <p>Favorite Coding Language: Javascript/jQuery. It adds functionality to web pages so it's not just static!</p>
   </body>
 </html>
