--- a/demo_index.html
+++ b/demo_index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>Git Demo Index Page</title>
+    <style type="text/css">
+      html{
+        background-color: blue;
+        font-family: Helvetica;
+      }
+    </style>
   </head>
   <body>
     <h1>Git Demo</h1>
