add last name too

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,7 +8,7 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-	Blair
+	Blair Beverly
     <!-- Your GitHub user name -->
     	electricblanket
     <!-- Your favorite coding language -->
