--- a/demo_index.html
+++ b/demo_index.html
@@ -6,6 +6,9 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <h3>Jagdeep Sidhu</h3>
+    <h4>same as name (JagdeepSidhu)</h4>
+    <h5>dont have favorite yet since I have just started coding</h5>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
