--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>Not sure what to add here but I do find this career very fitting...</p>
     <!-- Your name -->
-
+    <p>Amir Sedghi</p>
     <!-- Your GitHub user name -->
-    
+    <p>amirsedghi</p>
     <!-- Your favorite coding language -->
-
+    <p>Java but it's mainly because I have worked with it more than any other languages</p>
   </body>
 </html>
