I added some information

--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,11 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
 
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <h2>Name: Daniel</h2>
+    <h2>GitHub user name: s3llsw0rd</h2>
+    <h2>Favorite Coding Language</h2>
+    <p>Javascript, currently. It's got so many libraries that so many cool people have built.</p>
 
   </body>
 </html>
