--- a/demo_index.html
+++ b/demo_index.html
@@ -6,11 +6,14 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <h3> Info about me</h>
+    <p> The truth... </br></p>The truth is... (long awkward silence)</br> </br></br></p> <b><i> I am the Iron Man </i></b></p>
+    <p> My Name is Brandon McMahan. Github Username is Brandonm555 and favorite coding language right now is html because that's the only one I know. I'm excited to check out python though.</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
     <!-- Your GitHub user name -->
-    
+
     <!-- Your favorite coding language -->
 
   </body>
