--- a/demo_index.html
+++ b/demo_index.html
@@ -7,7 +7,9 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <h1>Elliot Young</h1>
+    <h1>elliotsyoung</h1>
+    <h1>assembly</h1>
 
     <!-- Your GitHub user name -->
     
