--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,10 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+      <p>  My Information</p>
+        <p>Amandeep Matharu</p>
+        <p>deepkaur001</p>
+        <p>My Favorite right now is Html/Css because i like designing,creativity and i am exicted to learn python</p>
 
   </body>
 </html>
