i added some stuff here

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,13 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>Some information about myself: male, 34, lives in Burbank. wut wut.</p>
     <!-- Your name -->
-
+    <p>Brian Cushman</p>
     <!-- Your GitHub user name -->
-    
+    <p>beecushman</p>
     <!-- Your favorite coding language -->
+    <p>My favorite programming language is Python.</p>
 
   </body>
 </html>
