committing changes from my forked file

--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,11 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
+    <p>my name is michael yang and i like to watch sports. my favorite team is the Seattle Seahawks and I believe that they will go to the superbowl this year and win it again.</p>
     
-    <!-- Your favorite coding language -->
 
+    <p>user name: michaelyang130 </p>  
+
+    <p>my favorite coding language as of now is html because it focuses on the actual markup of the web and it actual gives the page structure</p>
   </body>
 </html>
