--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <h2>Marco Molina</h2>
 
     <!-- Your GitHub user name -->
+    <h3>marcomolina11</h3>
     
     <!-- Your favorite coding language -->
+    <h3>Java</h3>
 
   </body>
 </html>
