--- a/demo_index.html
+++ b/demo_index.html
@@ -6,6 +6,10 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <h1>About Me</h1>
+    <p>I am currently learning how to use Terminal, Git, and Github.</p>
+    <p>My name is Preeya Sharma. My GitHub username is sharpree89.</p>
+    <p>My favorite coding language SO FAR is CSS but I'm sure that will change as I learn more languages!</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
