--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+            <p>I love to travel</p>
     <!-- Your name -->
-
+            <p>My name is Monica</p>
     <!-- Your GitHub user name -->
-    
+            <p>nakhem27</p>
     <!-- Your favorite coding language -->
-
+            <p>So far, just html/css.</p>
   </body>
 </html>
