Added some info about me

--- a/demo_index.html
+++ b/demo_index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Git Demo Index Page</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h1>Rich Ruais</h1>
     <!-- Your GitHub user name -->
-    
+    <h2>GitHub username - RRuais</h2>
     <!-- Your favorite coding language -->
+    <h2>Swift</h2> </body>
 
-  </body>
 </html>
