Nathan-adding info
Added my information to the document

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    Hello! I like to code and play video games!
     <!-- Your name -->
-
+    My name is Nathaniel Tan
     <!-- Your GitHub user name -->
-    
+    My username is TanPortfolio
     <!-- Your favorite coding language -->
-
-  </body>
+    My favorite coding language is Javascript
+  </body>d
 </html>
