--- a/demo_index.html
+++ b/demo_index.html
@@ -8,9 +8,12 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <h2>Mark Ayers</h2>
+    <h3>markthema3</h3>
+    <h3>C/C++</h3>
 
     <!-- Your GitHub user name -->
-    
+
     <!-- Your favorite coding language -->
 
   </body>
