--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    I love to code and fish and play with RC cars
     <!-- Your name -->
-
+    Christian Barrow
     <!-- Your GitHub user name -->
-    
+    BatsAuto
     <!-- Your favorite coding language -->
-
+    javaScript
   </body>
 </html>
