--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    Christian Kwon
 
     <!-- Your GitHub user name -->
-    
+    christiankwon
+
     <!-- Your favorite coding language -->
+    Javascript
 
   </body>
 </html>
