--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p><strong>Curious</strong></p>
     <!-- Your name -->
-
+    <h1>Scott Braaten</h1>
     <!-- Your GitHub user name -->
-    
+    <h2>sbraaten95</h2>
     <!-- Your favorite coding language -->
-
+    <h2>Java, in all its strictness</h2>
   </body>
 </html>
