--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    var name = 'Eugene Park';
     <!-- Your GitHub user name -->
-    
+    var gname = 'jin721';
     <!-- Your favorite coding language -->
-
+    var clang = 'java';
   </body>
 </html>
