--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,13 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
 
+    <!-- Your name -->
+    <p>My name is Inigo Montoyo</p>
     <!-- Your GitHub user name -->
-    
+    <p>alm958  Anthony L Meier</p>
     <!-- Your favorite coding language -->
+    <p>Python rocks!</p>
 
   </body>
 </html>
