html changes and simple.txt add

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,14 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <h2>Jason Wilcox</h2>
 
     <!-- Your GitHub user name -->
-    
+    <h3>DenverRenGuy</h3>
+
     <!-- Your favorite coding language -->
+    <p> So many coding languages to choose from.  Right now I still really love R!
+    It's the data scientist in me :)</p> 
 
   </body>
 </html>
