Changed info in demo_index.html

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <p>Jill Robinson</p>
 
     <!-- Your GitHub user name -->
+    <p>wildlingjill</p>  <!--Don't judge, I set it up a couple of years ago and it's too hard to change the name!-->
     
     <!-- Your favorite coding language -->
+    <p>Python</p>
 
   </body>
 </html>
