--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I almost done with Web Fundamentals!</p>
     <!-- Your name -->
-
+    <h1>Cody LaRont</h1>
     <!-- Your GitHub user name -->
-    
+    <p>On GitHub I am CodyIsCoding</p>
     <!-- Your favorite coding language -->
-
+    <p>My favorite coding language is undetermined but Python seems pretty popular.</p>
   </body>
 </html>
