added the requested information within <p> tags

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,19 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <p>
+        Sam Castle
+    </p>
 
     <!-- Your GitHub user name -->
-    
+    <p>
+        sgcastle
+    </p>
+
     <!-- Your favorite coding language -->
+    <p>
+        python
+    </p>
 
   </body>
 </html>
