index.html was changed with some infos

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <h3>Computer Science student</h3>
     <!-- Your name -->
-
+    <h3>My Name is: Dhurata</h3>
     <!-- Your GitHub user name -->
-    
+    <h3>dhuratak</h3>
     <!-- Your favorite coding language -->
-
+    <h2>PHP</h2>
   </body>
 </html>
