--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>my name is YingTung Wong, you can call me YT</p>
     <!-- Your GitHub user name -->
-    
+    <p>my github username is ytwong0195</p>
     <!-- Your favorite coding language -->
-
+    <p>not sure what my favourite coding language is yet..</p>
   </body>
 </html>
