--- a/demo_index.html
+++ b/demo_index.html
@@ -6,6 +6,13 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <ul>
+      <li>We do the thing</li>
+      <li>We do the thing</li>
+      <li>We do the thing</li>
+      <li>We do the thing</li>
+      <li>It does the thing</li>
+    </ul>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
