making changes to demo_index.html

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,16 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <h1>About me</h1>
+    <p>Just someone who loves coding</p>
     <!-- Your name -->
-
+    <h1>Name</h1>
+    <p>Luis Salas
     <!-- Your GitHub user name -->
-    
+    <h1>Github Username</h1>
+    <p>Luis-Salas</p>
     <!-- Your favorite coding language -->
-
+    <h1>Favorite Language</h1>
+    <p>Javascript!</p>
   </body>
 </html>
