sending this to github

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    Denis Mehinagic<!-- Your name -->
 
     <!-- Your GitHub user name -->
-    
+    MenaceDenis
     <!-- Your favorite coding language -->
-
+    Not Sure still trying to figure that out but im having fun so far! 
   </body>
 </html>
