--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+          Software engineer who likes to make a new thing
     <!-- Your name -->
-
+          SungChan Lee
     <!-- Your GitHub user name -->
-    
+          shawnlee5482
     <!-- Your favorite coding language -->
-
+          C/C++
   </body>
 </html>
