--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>Student at University of Business and Technology-Computer Science</p>
     <!-- Your name -->
-
+    <h3>Patrisa Imeri</h3>
     <!-- Your GitHub user name -->
-    
+    <h3>Patrisaimeri</h3>
     <!-- Your favorite coding language -->
-
+    <h3>Python</h3>
   </body>
 </html>
