adding info to HTML

--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,12 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
+I am a lover of life and an aspiring coding genius!
     <!-- Your name -->
-
+Kelda Anderson
     <!-- Your GitHub user name -->
-    
+KeldaAnders
     <!-- Your favorite coding language -->
-
+JS
   </body>
 </html>
