added personal info

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,9 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <h1> Jennifer Cortes</h1>
+    <p>github username: jennuinecode</p>
+    <p>favorite language: jQuery</p>
 
   </body>
 </html>
