updated the html

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <P>I'm a 34 year old person</P>
     <!-- Your name -->
-
+    <p>Colby Horan</p>
     <!-- Your GitHub user name -->
-    
+    <p>kid conway</p>
     <!-- Your favorite coding language -->
-
+    <p>git so far</p>
   </body>
 </html>
