Added Personal Info

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I really love Alice in Wonderland</p>
     <!-- Your name -->
-
+    <p>My name is ShinYi</p>
     <!-- Your GitHub user name -->
-    
+    <p>My username is shinxyi</p>
     <!-- Your favorite coding language -->
-
+    <p>My favorite languages are CSS and C++</p>
   </body>
 </html>
