My personal info for the demo

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <h2>Will Homan</h2>
 
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <p>My Github username is willtepes.</p>
+
+    <p>I guess my favorite programming language would have to be JavaScript that is the one i've learned much about so far.</p>
 
   </body>
 </html>
