Added personal info to html file.

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+	<h1>Hi, I'm a novice programmer!</h1>
     <!-- Your name -->
-
+	<h2>Name: Hiroshi Yanone</h2>
     <!-- Your GitHub user name -->
-    
+    <h3>Github Username: neko-pajama</h3>
     <!-- Your favorite coding language -->
-
+	<h3>Fav Language: Probably Python...</h3>
   </body>
 </html>
