finally changed..with struggles

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,9 +8,9 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+<p>my name is jiny</p>
     <!-- Your GitHub user name -->
-    
+    <p>username is kjhhelper!!!!!!!!</p>
     <!-- Your favorite coding language -->
 
   </body>
