--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+      <h4>Victor Pak</h4>
     <!-- Your GitHub user name -->
-    
+      <h5>GitHub: 09pve09</h5>
     <!-- Your favorite coding language -->
-
+      
+      <p>favorite coding language: JS</p>
   </body>
 </html>
