added a table to demo_index.html

--- a/demo_index.html
+++ b/demo_index.html
@@ -10,8 +10,12 @@
     <!-- Your name -->
 
     <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
 
+    <!-- Your favorite coding language -->
+    <ul>
+      <li>Surfing</li>
+      <li>Reading</li>
+      <li>Watching TV</li>
+    </ul>
   </body>
 </html>
