Added some basic information about myself

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,12 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <ul>
+      <li>Connie Chu</li>
     <!-- Your GitHub user name -->
-    
+      <li>conniechu929</li>
     <!-- Your favorite coding language -->
-
+      <li>Javascript</li>
+    </ul>
   </body>
 </html>
