Added personal info

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    My name is Kele Powell
 
     <!-- Your GitHub user name -->
-    
+    MY git User is kelep511
     <!-- Your favorite coding language -->
-
+        MY favorite cding language so far is JS
   </body>
 </html>
