added self info

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,18 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+	<p> I'm a recent UC Davis graduate with a C.S. Degree.</p>
     <!-- Your name -->
-
+	<p>
+		Ryan Pan
+	</p>
     <!-- Your GitHub user name -->
-    
+    <p>
+    	ryanjpan
+    </p>
     <!-- Your favorite coding language -->
-
+	<p>
+		C++
+	</p>
   </body>
 </html>
