--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,13 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I am a student at Coding Dojo!</p>
+    <p>I love sports!</p>
     <!-- Your name -->
-
+    <h2>My name is Andrew Choe</h2>
     <!-- Your GitHub user name -->
-    
+    <p>My GitHub user name is Andrewc91</p>
     <!-- Your favorite coding language -->
-
+    <p>My favorite coding language is Javascript!</p>
   </body>
 </html>
